--- a/_posts/2022-10-26-quad-tree.md
+++ b/_posts/2022-10-26-quad-tree.md
@@ -5,7 +5,7 @@ title: "Quadtrees to optimize n-body gravity simulation"
 
 ### About
 
-While researching the optimized n-body gravity simulations for my Ship Crew RPG game, I had to implement a quadtree / octree data structure so that I could implement the [Barnes-Hut algorithm](https://jheer.github.io/barnes-hut/).
+While researching the optimized n-body gravity simulations for my [Ship Crew RPG](./2023-6-29-ship-crew-rpg.md) game, I had to implement a quadtree / octree data structure so that I could implement the [Barnes-Hut algorithm](https://jheer.github.io/barnes-hut/).
 
 > You can see my Barnes-Hut gravity simulation [here.](./2022-10-27-barnes-hut-algorithm.md)
 
