Link to ROBLOX places for 3 featured posts

--- a/_posts/2022-10-26-quad-tree.md
+++ b/_posts/2022-10-26-quad-tree.md
@@ -15,6 +15,8 @@ In the context of the Barnes-Hut algorithm, a quadtree or octree allows us to ea
 
 ### Here's a demo ROBLOX place
 
+> You can play/edit this demo on ROBLOX [here.](https://www.roblox.com/games/11326654961/Quadtree)
+
 ![polished-quad-tree-1.gif](https://drive.google.com/uc?id=1oS3hc3Sscgsc0WTOp4wx6sWxU-liUHvI&export=download)
 
 _Each ball gets its own cell, generally speaking. Smaller cells are children of bigger cells._
