--- a/_posts/2022-10-26-quad-tree.md
+++ b/_posts/2022-10-26-quad-tree.md
@@ -5,9 +5,9 @@ title: "Quadtrees to optimize n-body gravity simulation"
 
 ### About
 
-While researching the optimized n-body gravity simulations for my [Ship Crew RPG](/2023-6-29-ship-crew-rpg.html) game, I had to implement a quadtree / octree data structure so that I could implement the [Barnes-Hut algorithm](https://jheer.github.io/barnes-hut/).
+While researching the optimized n-body gravity simulations for my [Ship Crew RPG]({% post_url 2023-6-29-ship-crew-rpg %}) game, I had to implement a quadtree / octree data structure so that I could implement the [Barnes-Hut algorithm](https://jheer.github.io/barnes-hut/).
 
-> You can see my Barnes-Hut gravity simulation [here.](/2022-10-27-barnes-hut-algorithm.html)
+> More about my Barnes-Hut gravity simulation [here.]({% post_url 2022-10-27-barnes-hut-algorithm %})
 
 A quadtree (2 dimensional) or octree (3 dimensional) is a spatial partioning data structure that allows you to quickly retrieve a set of points that are in a given region of space.
 
