Added thumbnail img src to all posts' front matter

--- a/_posts/2022-10-26-quad-tree.md
+++ b/_posts/2022-10-26-quad-tree.md
@@ -2,6 +2,7 @@
 layout: post
 title: "Quadtrees to optimize n-body gravity simulation"
 tags: ["ship crew rpg", "technical", "favorite posts"]
+thumbnail: https://drive.google.com/uc?id=1oS3hc3Sscgsc0WTOp4wx6sWxU-liUHvI&export=download
 ---
 
 ### About
